--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     
     <p>This is a simple web page that can handle deeplink for "scan_receipt".</p>
     
-    <a href="yourappname://scan_receipt">Click here to simulate the "scan_receipt" deeplink</a>
+    <a href="GetPlus://scan_receipt">Click here to simulate the "scan_receipt" deeplink</a>
 </body>
 </html>
