Change style text
Change style text

--- a/index.html
+++ b/index.html
@@ -7,11 +7,10 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            height: 100vh;
-            margin: 0;
+            margin: 40;
         }
         h1 {
-            font-size: 36px;
+            font-size: 50px;
             text-align: center;
         }
         p {
@@ -26,7 +25,7 @@
     
         <p>This is a simple web page that can handle deeplinks for "scan_receipt," "convert," and "reward."</p>
     
-        <a href="mygetplus://scan_receipt">Click here to simulate the "scan_receipt" deeplink and navigate to the scan receipt page</a>
+        <a href="mygetplus://scan_receipt">Click here to simulate the "scan_receipt" deeplink and navigate to the scan receipt page</a></br>
         <a href="mygetplus://convert">Click here to simulate the "convert" deeplink and navigate to the convert page</a>
         <a href="mygetplus://reward">Click here to simulate the "reward" deeplink and navigate to the reward page</a>
     </div>
