--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     
         <p>This is a simple web page that can handle deeplinks for "scan_receipt," "convert," and "reward."</p>
     
-        <a href="mygetplus://scan_receipt">Click here to simulate the "scan_receipt" deeplink and navigate to the scan receipt page</a></br>
-        <a href="mygetplus://convert">Click here to simulate the "convert" deeplink and navigate to the convert page</a>
-        <a href="mygetplus://reward">Click here to simulate the "reward" deeplink and navigate to the reward page</a>
+        <a href="mygetplus://scan_receipt">Click here to simulate the "scan_receipt" deeplink and navigate to the scan receipt page</a><br>
+        <a href="mygetplus://convert">Click here to simulate the "convert" deeplink and navigate to the convert page</a><br>
+        <a href="mygetplus://reward">Click here to simulate the "reward" deeplink and navigate to the reward page</a><br>
     </div>
 </body>
 </html>
