--- a/index.html
+++ b/index.html
@@ -7,14 +7,18 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 40;
+            margin: 50;
         }
         h1 {
-            font-size: 50px;
+            font-size: 70px;
             text-align: center;
         }
         p {
-            font-size: 24px;
+            font-size: 40px;
+            text-align: center;
+        }
+        a {
+            font-size: 40px;
             text-align: center;
         }
     </style>
@@ -25,8 +29,8 @@
     
         <p>This is a simple web page that can handle deeplinks for "scan_receipt," "convert," and "reward."</p>
     
-        <a href="mygetplus://scan_receipt">Click here to simulate the "scan_receipt" deeplink and navigate to the scan receipt page</a><br>
-        <a href="mygetplus://convert">Click here to simulate the "convert" deeplink and navigate to the convert page</a><br>
+        <a href="mygetplus://scan_receipt">Click here to simulate the "scan_receipt" deeplink and navigate to the scan receipt page</a><br><br>
+        <a href="mygetplus://convert">Click here to simulate the "convert" deeplink and navigate to the convert page</a><br><br>
         <a href="mygetplus://reward">Click here to simulate the "reward" deeplink and navigate to the reward page</a><br>
     </div>
 </body>
