--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            margin: 50;
+            margin: 50px;
         }
         h1 {
             font-size: 70px;
             text-align: center;
+            color: black;
         }
         p {
             font-size: 40px;
